[package]
name = "warbler_grass"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["scripts/", "assets/", "branding"]
keywords = ["bevy", "gamedev", "graphics", "grass", "rendering"]
repository = "https://github.com/EmiOnGit/warbler_grass"
description = "A bevy plugin for creating 3d grass in your game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
editor = ["dep:bevy-inspector-egui", "dep:rfd"]

[dependencies]
bytemuck = "1.13.0"
bitflags = "1.3.2"
serde = "1.0.153"
rfd = {version = "0.11.2", optional = true}
bevy-inspector-egui = {version = "0.18.0", optional = true}
[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [ "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr" , "png"]

[[example]]
name = "load_explicit"
path = "examples/load_explicit.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["bevy/bevy_winit","bevy/x11", "editor"]

[[example]]
name = "load_grass"
path = "examples/load_grass.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "many_chunks"
path = "examples/many_chunks.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "grass_colors"
path = "examples/grass_colors.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "grass_mesh"
path = "examples/grass_mesh.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]
