[package]
name = "warbler_grass"
version = "0.6.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["scripts/", "./assets/", "branding"]
keywords = ["bevy", "gamedev", "graphics", "grass", "rendering"]
repository = "https://github.com/EmiOnGit/warbler_grass"
description = "A bevy plugin for creating 3d grass in your game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytemuck = "1.13.0"
bitflags = "2"
image = "0.24.9" # needs to be in sync with the version used by bevy
[dependencies.bevy]
version = "0.13"
default-features = false
features = [ "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr" , "png", "multi-threaded"]

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_winit","x11", "ktx2", "zstd", "tonemapping_luts", "multi-threaded"] }


[[example]]
name = "load_grass"
path = "examples/load_grass.rs"
required-features = ["bevy/bevy_winit","bevy/x11"]

[[example]]
name = "many_chunks"
path = "examples/many_chunks.rs"

[[example]]
name = "grass_colors"
path = "examples/grass_colors.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "grass_mesh"
path = "examples/grass_mesh.rs"
